Change padding of 'Main Pitch' to align correctly at all viewports.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,10 @@
 * Browsers: last 4 version
 */
 
-/******************** Google Font Imports */
+/************************************************************* Google Font Imports */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap");
 
-/******************** HTML and Body Reset and basic display settings */
+/*************************************************************  HTML and Body Reset and basic display settings */
 
 body,
 html {
@@ -37,7 +37,7 @@ footer {
           flex: none;
 }
 
-/******************** Nav Bar */
+/*************************************************************  Nav Bar */
 
 .navbar {
   width: 100%;
@@ -99,7 +99,7 @@ footer {
   color: #fafafa;
 }
 
-/*************** Headings */
+/************************************************************* Headings */
 
 .main-logo {
   margin: 0 auto;
@@ -135,7 +135,7 @@ footer {
   letter-spacing: 6px;
 }
 
-/*************** Buttons */
+/************************************************************* Buttons */
 
 .glass-button {
   display: inline-block;
@@ -250,14 +250,14 @@ footer {
       transform: scale(1.1);
 }
 
-/*************** Main Body */
+/************************************************************* Main Body */
 
 .body-content {
   background: black;
   overflow: auto;
 }
 
-/*************** Index Page*/
+/************************************************************* Index Page*/
 
 .viewport-control {
   height: calc(100vh - 225px);
@@ -274,7 +274,6 @@ footer {
 
 .main-features {
   padding-top: 50px;
-  padding-bottom: 10px;
   text-align: center;
   -ms-flex-item-align: start;
       align-self: flex-start;
@@ -310,6 +309,9 @@ footer {
   -ms-flex-item-align: start;
       align-self: start;
   padding-top: 35px;
+  padding-bottom: 35px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .lower-screen .row {
@@ -325,6 +327,7 @@ footer {
 
 .main-pitch h2 {
   font-size: 1.5rem;
+  margin: 0;
 }
 
 .hero-image {
@@ -339,7 +342,7 @@ footer {
           flex-grow: 1;
 }
 
-/*************** About Page*/
+/************************************************************* About Page*/
 
 .about-page {
   color: #fafafa;
@@ -373,7 +376,7 @@ footer {
 .about-text {
 }
 
-/**************** Footer */
+/************************************************************* Footer */
 
 .footer {
   /* 'Lava' render from Gimp Software (www.gimp.com) */
@@ -510,7 +513,6 @@ footer {
 
   .main-features {
     padding-top: 25px;
-    padding-bottom: 25px;
   }
 
   .main-features h1 {
@@ -518,9 +520,9 @@ footer {
     text-align: left;
   }
 
-  .main-pitch {
+  /* .main-pitch {
     padding-top: 0px;
-  }
+  } */
 
   .main-pitch h2 {
     font-size: 1rem;
@@ -574,7 +576,7 @@ footer {
   }
 
   .main-pitch {
-    padding: 0;
+    /* padding: 0; */
     -ms-flex-item-align: stretch;
         -ms-grid-row-align: stretch;
         align-self: stretch;
